sidecar-ns.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: restrict-egress
spec:
  egress:
    - hosts:
        - ./*
        - istio-system/*
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
